--- a/ttt.html
+++ b/ttt.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Midground</title>
+    <title>MIDGROUND</title>
     <link rel="stylesheet" href="assets/css/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap" rel="stylesheet">
 </head>
@@ -14,7 +14,7 @@
 
     <nav class="navbar">
         <div class="navbar__container">
-            <a href="/" id="navbar__logo">Midground</a>
+            <a href="/" id="navbar__logo">MIDGROUND</a>
             <div class="navbar__toggle" id="mobile-menu">
                 <span class="bar"></span>
                 <span class="bar"></span>
@@ -31,7 +31,7 @@
                     <a href="/c4.html" class="navbar__links">C4</a>
                 </li>
                 <li class="navbar__btn">
-                    <a href="/" class="button">Sign Up</a>
+                    <a href="/" class="button">Sign In</a>
                 </li>
 
             </ul>
@@ -85,6 +85,8 @@
                     <a href="/">Investments</a>
                     <a href="/">Terms of Service</a>
                 </div>
+            </div>
+            <div class="footer__link--wrapper">
                 <div class="footer__link--items">
                     <h2>Contact</h2>
                     <a href="/">Contact</a>
@@ -93,36 +95,29 @@
                     <a href="/">Sponsorships</a>
                 </div>
             </div>
-            <div class="footer__link--wrapper">
-                <div class="footer__link--items">
-                    <h2>About Me</h2>
-                    <a href="/">How it works</a>
-                    <a href="/">Testimonials</a>
-                    <a href="/">Careers</a>
-                    <a href="/">Investments</a>
-                    <a href="/">Terms of Service</a>
-                </div>
-                <div class="footer__link--items">
-                    <h2>Social Media</h2>
-                    <a href="/">Instagram</a>
-                    <a href="/">Facebook</a>
-                    <a href="/">Youtube</a>
-                    <a href="/">Twitter</a>
-                </div>
-            </div>
         </div>
         <div class="social__media">
             <div class="social__media--wrap">
                 <div class="footer__logo">
-                    <a href="/" id="footer__logo"><i class="fas fa-gem"></i>Midground</a>
+                    <a href="/" id="footer__logo"><i class="fas fa-gem"></i>MIDGROUND</a>
                 </div>
-                <p class="website__rights">© Midground 2023. All rights reserved</p>
+                <p class="website__rights">© MIDGROUND 2023. All rights reserved</p>
                 <div class="social__icons">
-                    <a href="/" class="social__icon--link" target="_blank"><i class="fab fa-facebook"></i></a>
-                    <a href="/" class="social__icon--link" target="_blank"><i class="fab fa-instagram"></i></a>
-                    <a href="/" class="social__icon--link" target="_blank"><i class="fab fa-twitter"></i></a>
-                    <a href="/" class="social__icon--link" target="_blank"><i class="fab fa-linkedin"></i></a>
-                    <a href="/" class="social__icon--link" target="_blank"><i class="fab fa-youtube"></i></a>
+                    <a class="social__icon--link" href="/" target="_blank" aria-label="Facebook">
+                        <i class="fab fa-facebook fab"></i>
+                    </a>
+                    <a class="social__icon--link" href="/" target="_blank" aria-label="Instagram">
+                        <i class="fab fa-instagram insta"></i>
+                    </a>
+                    <a class="social__icon--link" href="/" target="_blank" aria-label="Youtube">
+                        <i class="fab fa-youtube youtube"></i>
+                    </a>
+                    <a class="social__icon--link" href="/" target="_blank" aria-label="Twitter">
+                        <i class="fab fa-twitter twitter"></i>
+                    </a>
+                    <a class="social__icon--link" href="/" target="_blank" aria-label="LinkedIn">
+                        <i class="fab fa-linkedin linkedin"></i>
+                    </a>
                 </div>
             </div>
         </div>
