Theme, c4.html, removed services, pic2, footer

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MIDGROUND</title>
+    <title>The Midground</title>
+    <link rel="shortcut icon" href="assets/images/favicon.ico">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap" rel="stylesheet">
@@ -15,7 +16,7 @@
 
     <nav class="navbar">
         <div class="navbar__container">
-            <a href="/" id="navbar__logo"><i class="fas fa-gem"></i>MIDGROUND</a>
+            <a href="/" id="navbar__logo"><i class="fas fa-moon"></i>MIDGROUND</a>
             <div class="navbar__toggle" id="mobile-menu">
                 <span class="bar"></span>
                 <span class="bar"></span>
@@ -23,7 +24,7 @@
             </div>
             <ul class="navbar__menu">
                 <li class="navbar__item">
-                    <a href="/" class="navbar__links">Home</a>
+                    <a href="/" class="navbar__links navbar__links--current">Home</a>
                 </li>
                 <li class="navbar__item">
                     <a href="/ttt.html" class="navbar__links">TTT</a>
@@ -44,20 +45,31 @@
     <div class="main">
         <div class="main__container">
             <div class="main__content">
-                <h1>THE MIDGROUND</h1>
+                <h1>THE MIDGROUND'S</h1>
                 <h2>TIC TAC TOE</h2>
                 <p>&lt;Play vs Player/Computer&gt;</p>
-                <button class="main__btn"><a href="/ttt.html">Start Playing</a></button>
+                <button class="main__btn"><a href="/ttt.html">IN DEVELOPMENT</a></button>
             </div>
             <div class="main__img--container">
                 <img src="assets/images/pic1.svg" alt="pic" id="main__img">
+            </div>
+        </div>
+        <div class="main__container">
+            <div class="main__img--container">
+                <img src="assets/images/pic2.svg" alt="pic" id="main__img">
+            </div>
+            <div class="main__content">
+                <h1>THE MIDGROUND'S</h1>
+                <h2>CONNECT 4</h2>
+                <p>&lt;Play vs Player/Computer&gt;</p>
+                <button class="main__btn"><a href="/c4.html">IN DEVELOPMENT</a></button>
             </div>
         </div>
     </div>
 
     <!-- Services -->
 
-    <div class="services">
+    <!-- <div class="services">
         <h1>See what the hype is about</h1>
         <div class="services__container">
             <div class="services__card">
@@ -71,12 +83,12 @@
                 <button>Get Started</button>
             </div>
         </div>
-    </div>
+    </div> -->
 
     <!-- Footer -->
 
     <div class="footer__container">
-        <div class="footer__links">
+        <!-- <div class="footer__links">
             <div class="footer__link--wrapper">
                 <div class="footer__link--items">
                     <h2>About Me</h2>
@@ -84,7 +96,6 @@
                     <a href="/">Testimonials</a>
                     <a href="/">Careers</a>
                     <a href="/">Investments</a>
-                    <a href="/">Terms of Service</a>
                 </div>
             </div>
             <div class="footer__link--wrapper">
@@ -96,16 +107,16 @@
                     <a href="/">Sponsorships</a>
                 </div>
             </div>
-        </div>
+        </div> -->
         <div class="social__media">
             <div class="social__media--wrap">
                 <div class="footer__logo">
-                    <a href="/" id="footer__logo"><i class="fas fa-gem"></i>MIDGROUND</a>
+                    <a href="/" id="footer__logo"><i class="fas fa-moon"></i>MIDGROUND</a>
                 </div>
-                <p class="website__rights">© MIDGROUND 2023. All rights reserved</p>
+                <p class="website__info">Designed by Matthew Yang &NonBreakingSpace; • &NonBreakingSpace; Template by&NonBreakingSpace;<a class="website__attribution" href="https://www.youtube.com/@briandesign">Brian Design</a></p>
                 <div class="social__icons">
-                    <a class="social__icon--link" href="/" target="_blank" aria-label="Facebook">
-                        <i class="fab fa-facebook fab"></i>
+                    <a class="social__icon--link" href="/" target="_blank" aria-label="Discord">
+                        <i class="fab fa-discord discord"></i>
                     </a>
                     <a class="social__icon--link" href="/" target="_blank" aria-label="Instagram">
                         <i class="fab fa-instagram insta"></i>
