--- a/ttt.html
+++ b/ttt.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MIDGROUND</title>
+    <title>The Midground</title>
+    <link rel="shortcut icon" href="assets/images/favicon.ico">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap" rel="stylesheet">
 </head>
@@ -14,7 +16,7 @@
 
     <nav class="navbar">
         <div class="navbar__container">
-            <a href="/" id="navbar__logo">MIDGROUND</a>
+            <a href="/" id="navbar__logo"><i class="fas fa-moon"></i>MIDGROUND</a>
             <div class="navbar__toggle" id="mobile-menu">
                 <span class="bar"></span>
                 <span class="bar"></span>
@@ -25,7 +27,7 @@
                     <a href="/" class="navbar__links">Home</a>
                 </li>
                 <li class="navbar__item">
-                    <a href="/ttt.html" class="navbar__links">TTT</a>
+                    <a href="/ttt.html" class="navbar__links navbar__links--current">TTT</a>
                 </li>
                 <li class="navbar__item">
                     <a href="/c4.html" class="navbar__links">C4</a>
@@ -43,10 +45,10 @@
     <div class="main">
         <div class="main__container">
             <div class="main__content">
-                <h1>TIC TAC TOE</h1>
-                <h2>WOOOOOOO</h2>
-                <p>Play vs Player or Computer.</p>
-                <button class="main__btn"><a href="/">Start Playing</a></button>
+                <h1>THE MIDGROUND'S</h1>
+                <h2>TIC TAC TOE</h2>
+                <p>IN DEVELOPMENT</p>
+                <button class="main__btn"><a href="/">RETURN HOME</a></button>
             </div>
             <div class="main__img--container">
                 <img src="assets/images/pic1.svg" alt="pic" id="main__img">
@@ -54,57 +56,19 @@
         </div>
     </div>
 
-    <!-- Services -->
-
-    <div class="services">
-        <h1>See what the hype is about</h1>
-        <div class="services__container">
-            <div class="services__card">
-                <h2>Experience Bliss</h2>
-                <p>AI Powered Technology</p>
-                <button>Get Started</button>
-            </div>
-            <div class="services__card">
-                <h2>Are you Ready?</h2>
-                <p>Take the leap</p>
-                <button>Get Started</button>
-            </div>
-        </div>
-    </div>
 
     <!-- Footer -->
 
     <div class="footer__container">
-        <div class="footer__links">
-            <div class="footer__link--wrapper">
-                <div class="footer__link--items">
-                    <h2>About Me</h2>
-                    <a href="/">How it works</a>
-                    <a href="/">Testimonials</a>
-                    <a href="/">Careers</a>
-                    <a href="/">Investments</a>
-                    <a href="/">Terms of Service</a>
-                </div>
-            </div>
-            <div class="footer__link--wrapper">
-                <div class="footer__link--items">
-                    <h2>Contact</h2>
-                    <a href="/">Contact</a>
-                    <a href="/">Support</a>
-                    <a href="/">Destinations</a>
-                    <a href="/">Sponsorships</a>
-                </div>
-            </div>
-        </div>
         <div class="social__media">
             <div class="social__media--wrap">
                 <div class="footer__logo">
-                    <a href="/" id="footer__logo"><i class="fas fa-gem"></i>MIDGROUND</a>
+                    <a href="/" id="footer__logo"><i class="fas fa-moon"></i>MIDGROUND</a>
                 </div>
-                <p class="website__rights">© MIDGROUND 2023. All rights reserved</p>
+                <p class="website__info">Designed by Matthew Yang &NonBreakingSpace; • &NonBreakingSpace; Template by&NonBreakingSpace;<a class="website__attribution" href="https://www.youtube.com/@briandesign">Brian Design</a></p>
                 <div class="social__icons">
-                    <a class="social__icon--link" href="/" target="_blank" aria-label="Facebook">
-                        <i class="fab fa-facebook fab"></i>
+                    <a class="social__icon--link" href="/" target="_blank" aria-label="Discord">
+                        <i class="fab fa-discord discord"></i>
                     </a>
                     <a class="social__icon--link" href="/" target="_blank" aria-label="Instagram">
                         <i class="fab fa-instagram insta"></i>
