main wording & sizing

--- a/c4.html
+++ b/c4.html
@@ -48,7 +48,7 @@
                 <img src="assets/images/pic2.svg" alt="pic" id="main__img">
             </div>
             <div class="main__content">
-                <h1>THE MIDGROUND'S</h1>
+                <h1>THE MIDGROUND</h1>
                 <h2>CONNECT 4</h2>
                 <p>IN DEVELOPMENT</p>
                 <button class="main__btn"><a href="/">RETURN HOME</a></button>
