--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <div class="main">
         <div class="main__container">
             <div class="main__content">
-                <h1>THE MIDGROUND'S</h1>
+                <h1>THE MIDGROUND</h1>
                 <h2>TIC TAC TOE</h2>
                 <p>&lt;Play vs Player/Computer&gt;</p>
                 <button class="main__btn"><a href="/ttt.html">IN DEVELOPMENT</a></button>
@@ -59,7 +59,7 @@
                 <img src="assets/images/pic2.svg" alt="pic" id="main__img">
             </div>
             <div class="main__content">
-                <h1>THE MIDGROUND'S</h1>
+                <h1>THE MIDGROUND</h1>
                 <h2>CONNECT 4</h2>
                 <p>&lt;Play vs Player/Computer&gt;</p>
                 <button class="main__btn"><a href="/c4.html">IN DEVELOPMENT</a></button>
