--- a/ttt.html
+++ b/ttt.html
@@ -45,7 +45,7 @@
     <div class="main">
         <div class="main__container">
             <div class="main__content">
-                <h1>THE MIDGROUND'S</h1>
+                <h1>THE MIDGROUND</h1>
                 <h2>TIC TAC TOE</h2>
                 <p>IN DEVELOPMENT</p>
                 <button class="main__btn"><a href="/">RETURN HOME</a></button>
