PvP TTT, social links, smooth scroll, styles

--- a/c4.html
+++ b/c4.html
@@ -8,6 +8,7 @@
     <link rel="icon" type="image/png" href="assets/images/favicon.png">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="assets/css/index.css">
     <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -48,8 +49,8 @@
                 <img src="assets/images/pic2.svg" alt="pic" id="main__img">
             </div>
             <div class="main__content">
-                <h1>THE MIDGROUND</h1>
-                <h2>CONNECT 4</h2>
+                <h1>GAMES</h1>
+                <h2>> CONNECT 4</h2>
                 <p>IN DEVELOPMENT</p>
                 <button class="main__btn"><a href="/">RETURN HOME</a></button>
             </div>
@@ -65,22 +66,29 @@
                 <div class="footer__logo">
                     <a href="/" id="footer__logo"><i class="fas fa-moon"></i>MIDGROUND</a>
                 </div>
-                <p class="website__info">Designed by Matthew Yang &NonBreakingSpace; • &NonBreakingSpace; Template by&NonBreakingSpace;<a class="website__attribution" href="https://www.youtube.com/@briandesign">Brian Design</a></p>
+                <p class="website__info">Designed by Matthew Yang &NonBreakingSpace; • &NonBreakingSpace; Template
+                    by&NonBreakingSpace;<a class="website__attribution" href="https://www.youtube.com/@briandesign">Brian
+                    Design</a></p>
                 <div class="social__icons">
-                    <a class="social__icon--link" href="/" target="_blank" aria-label="Discord">
+                    <a class="social__icon--link" href="https://discord.com/users/672173302373941256" target="_blank" aria-label="Discord">
                         <i class="fab fa-discord discord"></i>
+                        <span class="tooltip">Minuit#0554</span>
                     </a>
-                    <a class="social__icon--link" href="/" target="_blank" aria-label="Instagram">
+                    <a class="social__icon--link" href="https://www.instagram.com/mattshrewy" target="_blank" aria-label="Instagram">
                         <i class="fab fa-instagram insta"></i>
+                        <span class="tooltip">@mattshrewy</span>
                     </a>
-                    <a class="social__icon--link" href="/" target="_blank" aria-label="Youtube">
-                        <i class="fab fa-youtube youtube"></i>
+                    <a class="social__icon--link" href="https://github.com/mattshrew" target="_blank" aria-label="Github">
+                        <i class="fab fa-github github"></i>
+                        <span class="tooltip">mattshrew</span>
                     </a>
-                    <a class="social__icon--link" href="/" target="_blank" aria-label="Twitter">
+                    <a class="social__icon--link" target="_blank" aria-label="Twitter">
                         <i class="fab fa-twitter twitter"></i>
+                        <span class="tooltip">???</span>
                     </a>
-                    <a class="social__icon--link" href="/" target="_blank" aria-label="LinkedIn">
+                    <a class="social__icon--link" target="_blank" aria-label="LinkedIn">
                         <i class="fab fa-linkedin linkedin"></i>
+                        <span class="tooltip">???</span>
                     </a>
                 </div>
             </div>
