--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,8 +9,10 @@
     <link rel="icon" type="image/png" href="assets/images/favicon.png">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="assets/css/index.css" >
     <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap" rel="stylesheet">
 </head>
+
 <body>
 
     <!-- Navigation -->
@@ -18,51 +21,51 @@
         <div class="navbar__container">
             <a href="/" id="navbar__logo"><i class="fas fa-moon"></i>MIDGROUND</a>
             <div class="navbar__toggle" id="mobile-menu">
-                <span class="bar"></span>
-                <span class="bar"></span>
-                <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
             </div>
             <ul class="navbar__menu">
-                <li class="navbar__item">
-                    <a href="/" class="navbar__links navbar__links--current">Home</a>
-                </li>
-                <li class="navbar__item">
-                    <a href="/ttt.html" class="navbar__links">TTT</a>
-                </li>
-                <li class="navbar__item">
-                    <a href="/c4.html" class="navbar__links">C4</a>
-                </li>
-                <li class="navbar__btn">
-                    <a href="/" class="button">Sign In</a>
-                </li>
+            <li class="navbar__item">
+                <a href="/" class="navbar__links navbar__links--current">Home</a>
+            </li>
+            <li class="navbar__item">
+                <a href="/ttt.html" class="navbar__links">TTT</a>
+            </li>
+            <li class="navbar__item">
+                <a href="/c4.html" class="navbar__links">C4</a>
+            </li>
+            <li class="navbar__btn">
+                <a href="/" class="button">Sign In</a>
+            </li>
 
             </ul>
         </div>
     </nav>
 
-    <!-- Hero -->
+  <!-- Hero -->
 
     <div class="main">
         <div class="main__container">
             <div class="main__content">
-                <h1>THE MIDGROUND</h1>
-                <h2>TIC TAC TOE</h2>
-                <p>&lt;Play vs Player/Computer&gt;</p>
-                <button class="main__btn"><a href="/ttt.html">IN DEVELOPMENT</a></button>
+            <h1>GAMES</h1>
+            <h2>> TIC TAC TOE</h2>
+            <p>&lt;Play vs Player/Computer&gt;</p>
+            <button class="main__btn"><a href="/ttt.html">IN DEVELOPMENT</a></button>
             </div>
             <div class="main__img--container">
-                <img src="assets/images/pic1.svg" alt="pic" id="main__img">
+            <img src="assets/images/pic1.svg" alt="pic" id="main__img">
             </div>
         </div>
         <div class="main__container">
             <div class="main__img--container">
-                <img src="assets/images/pic2.svg" alt="pic" id="main__img">
+            <img src="assets/images/pic2.svg" alt="pic" id="main__img">
             </div>
             <div class="main__content">
-                <h1>THE MIDGROUND</h1>
-                <h2>CONNECT 4</h2>
-                <p>&lt;Play vs Player/Computer&gt;</p>
-                <button class="main__btn"><a href="/c4.html">IN DEVELOPMENT</a></button>
+            <h1>GAMES</h1>
+            <h2>> CONNECT 4</h2>
+            <p>&lt;Play vs Player/Computer&gt;</p>
+            <button class="main__btn"><a href="/c4.html">IN DEVELOPMENT</a></button>
             </div>
         </div>
     </div>
@@ -89,46 +92,53 @@
 
     <div class="footer__container">
         <!-- <div class="footer__links">
-            <div class="footer__link--wrapper">
-                <div class="footer__link--items">
-                    <h2>About Me</h2>
-                    <a href="/">How it works</a>
-                    <a href="/">Testimonials</a>
-                    <a href="/">Careers</a>
-                    <a href="/">Investments</a>
+                <div class="footer__link--wrapper">
+                    <div class="footer__link--items">
+                        <h2>About Me</h2>
+                        <a href="/">How it works</a>
+                        <a href="/">Testimonials</a>
+                        <a href="/">Careers</a>
+                        <a href="/">Investments</a>
+                    </div>
                 </div>
-            </div>
-            <div class="footer__link--wrapper">
-                <div class="footer__link--items">
-                    <h2>Contact</h2>
-                    <a href="/">Contact</a>
-                    <a href="/">Support</a>
-                    <a href="/">Destinations</a>
-                    <a href="/">Sponsorships</a>
+                <div class="footer__link--wrapper">
+                    <div class="footer__link--items">
+                        <h2>Contact</h2>
+                        <a href="/">Contact</a>
+                        <a href="/">Support</a>
+                        <a href="/">Destinations</a>
+                        <a href="/">Sponsorships</a>
+                    </div>
                 </div>
-            </div>
-        </div> -->
+            </div> -->
         <div class="social__media">
             <div class="social__media--wrap">
                 <div class="footer__logo">
                     <a href="/" id="footer__logo"><i class="fas fa-moon"></i>MIDGROUND</a>
                 </div>
-                <p class="website__info">Designed by Matthew Yang &NonBreakingSpace; • &NonBreakingSpace; Template by&NonBreakingSpace;<a class="website__attribution" href="https://www.youtube.com/@briandesign">Brian Design</a></p>
+                <p class="website__info">Designed by Matthew Yang &NonBreakingSpace; • &NonBreakingSpace; Template
+                    by&NonBreakingSpace;<a class="website__attribution" href="https://www.youtube.com/@briandesign">Brian
+                    Design</a></p>
                 <div class="social__icons">
-                    <a class="social__icon--link" href="/" target="_blank" aria-label="Discord">
+                    <a class="social__icon--link" href="https://discord.com/users/672173302373941256" target="_blank" aria-label="Discord">
                         <i class="fab fa-discord discord"></i>
+                        <span class="tooltip">Minuit#0554</span>
                     </a>
-                    <a class="social__icon--link" href="/" target="_blank" aria-label="Instagram">
+                    <a class="social__icon--link" href="https://www.instagram.com/mattshrewy" target="_blank" aria-label="Instagram">
                         <i class="fab fa-instagram insta"></i>
+                        <span class="tooltip">@mattshrewy</span>
                     </a>
-                    <a class="social__icon--link" href="/" target="_blank" aria-label="Youtube">
-                        <i class="fab fa-youtube youtube"></i>
+                    <a class="social__icon--link" href="https://github.com/mattshrew" target="_blank" aria-label="Github">
+                        <i class="fab fa-github github"></i>
+                        <span class="tooltip">mattshrew</span>
                     </a>
-                    <a class="social__icon--link" href="/" target="_blank" aria-label="Twitter">
+                    <a class="social__icon--link" target="_blank" aria-label="Twitter">
                         <i class="fab fa-twitter twitter"></i>
+                        <span class="tooltip">???</span>
                     </a>
-                    <a class="social__icon--link" href="/" target="_blank" aria-label="LinkedIn">
+                    <a class="social__icon--link" target="_blank" aria-label="LinkedIn">
                         <i class="fab fa-linkedin linkedin"></i>
+                        <span class="tooltip">???</span>
                     </a>
                 </div>
             </div>
@@ -137,4 +147,5 @@
 
     <script src="assets/js/app.js"></script>
 </body>
+
 </html>
