ttt animations, new Xs and Os

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   <!-- Hero -->
 
     <div class="main">
-        <div class="main__container">
+        <div class="main__container"></div>
             <div class="main__content">
                 <h1>GAMES</h1>
                 <h2>> TIC TAC TOE</h2>
