--- a/c4.html
+++ b/c4.html
@@ -45,11 +45,11 @@
     <div class="main">
         <div class="main__container">
             <div class="main__img--container">
-                <img src="assets/images/pic2.svg" alt="pic" id="main__img">
+                <img src="assets/images/pic2.svg" alt="pic" class="main__img">
             </div>
             <div class="main__content">
                 <h1>GAMES</h1>
-                <h2>> CONNECT 4</h2>
+                <h2>&gt; CONNECT 4</h2>
                 <p>IN DEVELOPMENT</p>
                 <button class="main__btn"><a href="/">RETURN HOME</a></button>
             </div>
