--- a/index.html
+++ b/index.html
@@ -48,23 +48,23 @@
         <div class="main__container">
             <div class="main__content">
                 <h1>GAMES</h1>
-                <h2>> TIC TAC TOE</h2>
+                <h2>&gt; TIC TAC TOE</h2>
                 <p>&lt;Play vs Player/Computer&gt;</p>
                 <button class="main__btn"><a href="/ttt.html">IN DEVELOPMENT</a></button>
             </div>
             <div class="main__img--container">
-                <img src="assets/images/pic1.svg" alt="pic" id="main__img">
+                <img src="assets/images/pic1.svg" alt="pic" class="main__img">
             </div>
         </div>
         <div class="main__container">
-            <div class="main__img--container">
-                <img src="assets/images/pic2.svg" alt="pic" id="main__img">
-            </div>
             <div class="main__content">
                 <h1>GAMES</h1>
-                <h2>> CONNECT 4</h2>
+                <h2>&gt; CONNECT 4</h2>
                 <p>&lt;Play vs Player/Computer&gt;</p>
                 <button class="main__btn"><a href="/c4.html">IN DEVELOPMENT</a></button>
+            </div>
+            <div class="main__img--container">
+                <img src="assets/images/pic2.svg" alt="pic" class="main__img">
             </div>
         </div>
     </div>
