ttt computer difficulties

--- a/ttt.html
+++ b/ttt.html
@@ -63,6 +63,8 @@
     <div id="play"><br /></div>
     <div class="tic-tac-toe">
         <div id="tic-tac-toe__title" data-content="PLAYER VS PLAYER">PLAYER VS PLAYER</div>
+        <br />
+        <div id="tic-tac-toe__difficulty" data-content="DIFFICULTY: EASY">DIFFICULTY: EASY</div>
 
         <p id="game__info"></p>
 
