temporary commit (saving work)

--- a/ttt.html
+++ b/ttt.html
@@ -50,7 +50,7 @@
             <div class="main__content">
                 <h1>GAMES</h1>
                 <h2>&gt; TIC TAC TOE</h2>
-                <p>IN DEVELOPMENT</p>
+                <p>&lt;Play vs Player/Computer&gt;</p>
                 <button class="main__btn"><a href="#play">PLAY NOW</a></button>
             </div>
             <div class="main__img--container">
