--- a/c4.html
+++ b/c4.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="stylesheet" href="assets/css/index.css">
+    <link rel="stylesheet" href="assets/css/c4.css">
     <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -56,6 +57,78 @@
         </div>
     </div>
 
+    <!-- Connect 4 -->
+    <div id="play"><br /></div>
+    <div class="connect-4">
+        <div id="connect-4__title" data-content="PLAYER VS PLAYER">PLAYER VS PLAYER</div>
+        <br />
+        <div id="connect-4__difficulty" data-content="DIFFICULTY: EASY">DIFFICULTY: EASY</div>
+
+        <p id="game__info"></p>
+
+        <table class="board">
+            <tbody>
+                <tr class="board__row">
+                    <td class="board__cell" data-row="5" data-col="0"></td>
+                    <td class="board__cell" data-row="5" data-col="1"></td>
+                    <td class="board__cell" data-row="5" data-col="2"></td>
+                    <td class="board__cell" data-row="5" data-col="3"></td>
+                    <td class="board__cell" data-row="5" data-col="4"></td>
+                    <td class="board__cell" data-row="5" data-col="5"></td>
+                    <td class="board__cell" data-row="5" data-col="6"></td>
+                </tr>
+                <tr class="board__row">
+                    <td class="board__cell" data-row="4" data-col="0"></td>
+                    <td class="board__cell" data-row="4" data-col="1"></td>
+                    <td class="board__cell" data-row="4" data-col="2"></td>
+                    <td class="board__cell" data-row="4" data-col="3"></td>
+                    <td class="board__cell" data-row="4" data-col="4"></td>
+                    <td class="board__cell" data-row="4" data-col="5"></td>
+                    <td class="board__cell" data-row="4" data-col="6"></td>
+                </tr>
+                <tr class="board__row">
+                    <td class="board__cell" data-row="3" data-col="0"></td>
+                    <td class="board__cell" data-row="3" data-col="1"></td>
+                    <td class="board__cell" data-row="3" data-col="2"></td>
+                    <td class="board__cell" data-row="3" data-col="3"></td>
+                    <td class="board__cell" data-row="3" data-col="4"></td>
+                    <td class="board__cell" data-row="3" data-col="5"></td>
+                    <td class="board__cell" data-row="3" data-col="6"></td>
+                </tr>
+                <tr class="board__row">
+                    <td class="board__cell" data-row="2" data-col="0"></td>
+                    <td class="board__cell" data-row="2" data-col="1"></td>
+                    <td class="board__cell" data-row="2" data-col="2"></td>
+                    <td class="board__cell" data-row="2" data-col="3"></td>
+                    <td class="board__cell" data-row="2" data-col="4"></td>
+                    <td class="board__cell" data-row="2" data-col="5"></td>
+                    <td class="board__cell" data-row="2" data-col="6"></td>
+                </tr>
+                <tr class="board__row">
+                    <td class="board__cell" data-row="1" data-col="0"></td>
+                    <td class="board__cell" data-row="1" data-col="1"></td>
+                    <td class="board__cell" data-row="1" data-col="2"></td>
+                    <td class="board__cell" data-row="1" data-col="3"></td>
+                    <td class="board__cell" data-row="1" data-col="4"></td>
+                    <td class="board__cell" data-row="1" data-col="5"></td>
+                    <td class="board__cell" data-row="1" data-col="6"></td>
+                </tr>
+                <tr class="board__row">
+                    <td class="board__cell" data-row="0" data-col="0"></td>
+                    <td class="board__cell" data-row="0" data-col="1"></td>
+                    <td class="board__cell" data-row="0" data-col="2"></td>
+                    <td class="board__cell" data-row="0" data-col="3"></td>
+                    <td class="board__cell" data-row="0" data-col="4"></td>
+                    <td class="board__cell" data-row="0" data-col="5"></td>
+                    <td class="board__cell" data-row="0" data-col="6"></td>
+                </tr>
+            </tbody>
+        </table>
+
+        <p id="game__result"></p>
+        <button class="connect-4__reset" onclick="resetGame()">RESET</button>
+    </div>
+
 
     <!-- Footer -->
 
@@ -95,5 +168,6 @@
     </div>
 
     <script src="assets/js/app.js"></script>
+    <script src="assets/js/c4.js"></script>    
 </body>
 </html>
