C4, removed hero from TTT and C4

--- a/c4.html
+++ b/c4.html
@@ -41,24 +41,8 @@
         </div>
     </nav>
 
-    <!-- Hero -->
-
-    <div class="main">
-        <div class="main__container">
-            <div class="main__img--container">
-                <img src="assets/images/pic2.svg" alt="pic" class="main__img">
-            </div>
-            <div class="main__content">
-                <h1>GAMES</h1>
-                <h2>&gt; CONNECT 4</h2>
-                <p>IN DEVELOPMENT</p>
-                <button class="main__btn"><a href="/">RETURN HOME</a></button>
-            </div>
-        </div>
-    </div>
-
     <!-- Connect 4 -->
-    <div id="play"><br /></div>
+    <!-- <div id="play"><br /></div> -->
     <div class="connect-4">
         <div id="connect-4__title" data-content="PLAYER VS PLAYER">PLAYER VS PLAYER</div>
         <br />
