--- a/ttt.html
+++ b/ttt.html
@@ -43,24 +43,8 @@
         </div>
     </nav>
 
-    <!-- Hero -->
-
-    <div class="main">
-        <div class="main__container">
-            <div class="main__content">
-                <h1>GAMES</h1>
-                <h2>&gt; TIC TAC TOE</h2>
-                <p>&lt;Play vs Player/Computer&gt;</p>
-                <button class="main__btn"><a href="#play">PLAY NOW</a></button>
-            </div>
-            <div class="main__img--container">
-                <img src="assets/images/pic1.svg" alt="pic" class="main__img">
-            </div>
-        </div>
-    </div>
-
     <!-- Tic Tac Toe -->
-    <div id="play"><br /></div>
+    <!-- <div id="play"><br /></div> -->
     <div class="tic-tac-toe">
         <div id="tic-tac-toe__title" data-content="PLAYER VS PLAYER">PLAYER VS PLAYER</div>
         <br />
