--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
                 <li class="navbar__item">
                     <a href="/c4.html" class="navbar__links">C4</a>
                 </li>
+                <li class="navbar__item">
+                    <a href="/about_me.html" class="navbar__links navbar__links--long">About Me</a>
+                </li>
                 <li class="navbar__btn">
                     <a href="/" class="button">Sign In</a>
                 </li>
