--- a/ttt.html
+++ b/ttt.html
@@ -9,7 +9,6 @@
     <link rel="icon" type="image/png" href="assets/images/favicon.png">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/styles.css">
-    <link rel="stylesheet" href="assets/css/index.css">
     <link rel="stylesheet" href="assets/css/ttt.css">
     <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap" rel="stylesheet">
 </head>
@@ -35,6 +34,9 @@
                 </li>
                 <li class="navbar__item">
                     <a href="/c4.html" class="navbar__links">C4</a>
+                </li>
+                <li class="navbar__item">
+                    <a href="/about_me.html" class="navbar__links navbar__links--long">About Me</a>
                 </li>
                 <li class="navbar__btn">
                     <a href="/" class="button">Sign In</a>
