--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <h1>GAMES</h1>
                 <h2>&gt; TIC TAC TOE</h2>
                 <p>&lt;Play vs Player/Computer&gt;</p>
-                <button class="main__btn"><a href="/ttt.html">IN DEVELOPMENT</a></button>
+                <button class="main__btn"><a href="/ttt.html">PLAY NOW</a></button>
             </div>
             <div class="main__img--container">
                 <img src="assets/images/pic1.svg" alt="pic" class="main__img">
