--- a/about_me.html
+++ b/about_me.html
@@ -36,7 +36,7 @@
                     <a href="/c4.html" class="navbar__links">C4</a>
                 </li>
                 <li class="navbar__item">
-                    <a href="/about_me.html" class="navbar__links navbar__links--long navbar__links--current">About Me</a>
+                    <a href="/" class="navbar__links navbar__links--long navbar__links--current">About Me</a>
                 </li>
                 <li class="navbar__btn">
                     <a href="/" class="button">Sign In</a>
