Update to ESQ LIT introduction

--- a/esq.html
+++ b/esq.html
@@ -65,7 +65,7 @@
         <div class="about__container">
             <div class="about__content" id="introduction">
                 <h1>Introduction</h1>
-                <p>I am a Grade 10 Extended French student at Waterloo Collegiate Institute with a passion for all things STEM and a dream of working in a computer science field. I am positive, hardworking, collaborative, a critical thinker, and a leader. In my spare time, I enjoy programming, playing chess, practicing guitar, learning advanced mathematics, and solving logic puzzles.</p>
+                <p>My name is Matthew Yang. I am a Grade 10 Extended French student at Waterloo Collegiate Institute with a passion for all things STEM and a dream of working in a computer science field. I am positive, hardworking, collaborative, a critical thinker, and a leader. In my spare time, I enjoy programming, playing chess, practicing guitar, learning advanced mathematics, and solving logic puzzles.</p>
             </div>
             <div class="about__img--container">
                 <img src="assets/images/hello.svg" alt="pic" class="about__img">
@@ -106,22 +106,6 @@
                 <img src="assets/images/app.svg" alt="pic" class="about__img about__img--multiple">
                 <img src="assets/images/math.svg" alt="pic" class="about__img about__img--multiple">
             </div>
-
-            <!-- <div class="about__img--container">
-                <img src="assets/images/schedule.svg" alt="pic" class="about__img">
-            </div>
-            <div class="about__content" id="leadership">
-                <h1>Leadership</h1>
-
-                <h2>School</h2>
-                <p>During group projects, I frequently take charge of my team. To ensure our success, I often assign tasks, create mini-deadlines, and check in on my partners. In 2019, I was elected to Lester B. Pearson's Student Council. I was also a member of the Junior Leadership Club at WCI in my Grade 9 year. Next year, I plan on applying for leadership positions in my favourite clubs (Computer Science and Chess).</p>
-                
-                <h2>DECA</h2>
-                <p>This year, I competed in DECA, an international business competition. I lead my group of 3 by assigning roles, using tools for productivity and organization, creating schedules, and scheduling work periods. We conducted a research study for a business, created a budgeted strategic plan, wrote a 20-page report, and presented our work at Ontario DECA (the largest DECA association in the world). My group won 6th in our event (Hospitality and Tourism Operations Research).</p>
-            
-                <h2>Other</h2>
-                <p>I gave weekly private chess lessons to beginners from 2019 to 2021. In 2022, I tutored Grade 9 mathematics through HomeworkHub for 8 weeks. I also babysat my two cousins when they were younger.</p>
-            </div> -->
 
             <div class="about__img--container">
                 <img src="assets/images/celebration.svg" alt="pic" class="about__img">
