C4 computer (easy + medium), debugging

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <h1>GAMES</h1>
                 <h2>&gt; CONNECT 4</h2>
                 <p>&lt;Play vs Player/Computer&gt;</p>
-                <button class="main__btn"><a href="/c4.html">IN DEVELOPMENT</a></button>
+                <button class="main__btn"><a href="/c4.html">PLAY NOW</a></button>
             </div>
             <div class="main__img--container">
                 <img src="assets/images/pic2.svg" alt="pic" class="main__img">
