--- a/c4.html
+++ b/c4.html
@@ -34,7 +34,7 @@
                     <a href="/c4.html" class="navbar__links navbar__links--current">C4</a>
                 </li>
                 <li class="navbar__item">
-                    <a href="/" class="navbar__links navbar__links--long">About Me</a>
+                    <a href="/about_me.html" class="navbar__links navbar__links--long">About Me</a>
                 </li>
                 <li class="navbar__btn">
                     <a href="/" class="button">Sign In</a>
