--- a/about-me.html
+++ b/about-me.html
@@ -9,7 +9,7 @@
     <link rel="icon" type="image/png" href="assets/images/favicon.png">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/styles.css">
-    <link rel="stylesheet" href="assets/css/about_me.css" >
+    <link rel="stylesheet" href="assets/css/about-me.css" >
     <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap" rel="stylesheet">
 </head>
 
@@ -36,7 +36,7 @@
                     <a href="/c4.html" class="navbar__links">C4</a>
                 </li>
                 <li class="navbar__item">
-                    <a href="/about_me.html" class="navbar__links navbar__links--long navbar__links--current">About Me</a>
+                    <a href="/about-me.html" class="navbar__links navbar__links--long navbar__links--current">About Me</a>
                 </li>
                 <li class="navbar__btn">
                     <a href="/" class="button">Sign In</a>
