security-awareness: finished quiz

--- a/security-awareness.html
+++ b/security-awareness.html
@@ -61,18 +61,10 @@
     <div id="quiz">
         <div id="quiz__container" class="fade">
             <div id="quiz__info">
-                <div id="quiz__title"><h3>SECURITY AWARENESS QUIZ</h3><hr></div>
+                <div id="quiz__title"><h3 id="quiz__title--content">SECURITY AWARENESS QUIZ</h3><hr></div>
                 <div id="quiz__question"></div>
-                <!-- <div id="quiz__title"><h3>SECURITY AWARENESS QUIZ</h3><hr></div>
-                <div id="quiz__question">1.&nbsp;&nbsp;Do you use the same password for many different accounts?</div> -->
             </div>
-            <ul id="quiz__answers">
-                <!-- <li>Always</li>
-                <li>Often</li>
-                <li>Sometimes</li>
-                <li>Rarely</li>
-                <li>Never</li> -->
-            </ul>
+            <ul id="quiz__answers"></ul>
         </div>
     </div>
 
