security-awareness: finished quiz & info

--- a/security-awareness.html
+++ b/security-awareness.html
@@ -59,7 +59,7 @@
     <!-- Quiz -->
 
     <div id="quiz">
-        <div id="quiz__container" class="fade">
+        <div id="quiz__container">
             <div id="quiz__info">
                 <div id="quiz__title"><h3 id="quiz__title--content">SECURITY AWARENESS QUIZ</h3><hr></div>
                 <div id="quiz__question"></div>
@@ -73,7 +73,10 @@
 
     <div id="info">
         <div id="info__container">
-
+            <div id="info__button__container">
+                <button class="info__button" type="button" onclick="expandInfoBlocks()">Expand All</button>
+                <button class="info__button" type="button" onclick="collapseInfoBlocks()">Collapse All</button>
+            </div>
         </div>
     </div>
 
@@ -92,7 +95,7 @@
                 <div class="social__icons">
                     <a class="social__icon--link" href="https://discord.com/users/672173302373941256" target="_blank" aria-label="Discord">
                         <i class="fab fa-discord discord"></i>
-                        <span class="tooltip">Minuit#0554</span>
+                        <span class="tooltip">Minuit#2922</span>
                     </a>
                     <a class="social__icon--link" href="https://www.instagram.com/mattshrewy" target="_blank" aria-label="Instagram">
                         <i class="fab fa-instagram insta"></i>
