security-awareness: added my results

--- a/security-awareness.html
+++ b/security-awareness.html
@@ -81,6 +81,33 @@
     </div>
 
 
+    <!-- Results -->
+    <div id="results">
+        <div id="results__container">
+            <!-- <button id="results__title" class="info__collapsible--button" type="button">MY RESULTS</button>
+            <h2>My score: 84%</h2>
+            <ul>
+                <li>I am often wary of accepting cookies/terms of service on unfamiliar websites. I only accept necessary cookies and usually skim privacy policies before continuing.</li>
+                <li>I use Google's password manager to generate and store my passwords. Because of this, my passwords are all very strong and are rarely repeated across different accounts.
+                <li>I try to use MFA (multi-factor authentication) as much as possible. On platforms that have an option for 2FA, I have this feature enabled. Attackers must have both my password and my phone to access my account on these websites. I do not regularly scan my computer for malware.</li>
+                <li>I am very wary of using unsecured websites, and always try to avoid them.</li>
+                <li>I share Netflix and Disney+ accounts with my cousins. However, I am not sure that they know how to be digitally secure. I do not possess any shared devices.</li>
+                <li>I am very cautious of downloading content from the internet. If I cannot trust the source, I will not risk downloading malware. All of my devices are password-protected.</li>
+                <li>My inbox receives a lot of phishing emails, which are all immediately deleted. Most are very easy to discern—with their poorly disguised email addresses, misspelled words, and clickbait-y hyperlinks.</li>
+                <li>I always hover over hyperlinks before clicking them, and have never experienced a virus or ransomware attack. However, I have never backed up my important files.</li>
+                <li>All of my social media accounts are private. Strangers cannot see my posts.</li>
+            </ul>
+            <h2>Suggestions for improvement</h2>
+            <ul>
+                <li>Always fully read a company/website's privacy policy before agreeing to their terms and conditions.</li>
+                <li>Consider using a VPN. VPNs protect your identity from companies, the government, and attackers.</li>
+                <li>Important files should be backed up every week, preferably every day. Try to follow the 3-2-1 rule for backing up files.</li>
+                <li>It is recommended that you scan your computer for malware once a week.</li>
+            </ul> -->
+        </div>
+    </div>
+
+
     <!-- Footer -->
 
     <div class="footer__container">
@@ -121,6 +148,7 @@
     <script src="assets/js/app.js"></script>
     <script src="assets/js/security-awareness.js"></script>
     <script>buildInfoBlocks();</script>
+    <script>buildMyResults();</script>
 </body>
 
 </html>
